# liveserver

./: Cargo.toml  README.md  build.py  build.rs  index.html.tera
.cargo/: config.toml
.github/workflows/: release.yml
src/: main.rs  open_explorer.rs
templates/: error.html  filelist.html
