[package]
name = "liveserver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0"
actix-web = "4"
chrono = "0"
colored = { git = "https://github.com/cnlancehu/colored" }
futures = "0"
lazy_static = "1"
mime_guess = "2"
qrcode = "0"
serde = { version = "1", features = ["derive"] }
tera = "1"
termsize = "0"
tokio = { version = "1", features = ["full"] }
unicode-width = "0"
walkdir = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
