[package]
name = "live"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0"
cnxt = "0.1.3"
lazy_static = "1"
mime_guess = "2"
qrcode = "0"
salvo = { version = "0.87.1", default-features = false, features = ["http1", "server"] }
serde = { version = "1.0.219", features = ["derive"] }
tera = "1"
termsize = "0"
tokio = { version = "1.44.2", features = ["full"] }
unicode-width = "0"
walkdir = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
